# etheroff

./: .gitignore  Cargo.toml  README.md
example/: example-private-key.gpg  example.sh
src/: main.rs
src/interactive_cli_lib/: get_confirmation.rs  get_eth_address.rs  get_eth_amount.rs  get_eth_calldata.rs  get_eth_gas_limit.rs  get_eth_gas_price.rs  get_eth_network.rs  get_eth_nonce.rs  get_eth_private_key.rs  mod.rs  show_transaction_details.rs  sign_transaction.rs  state.rs  utils.rs
src/lib/: chain_id.rs  constants.rs  decrypt_ethereum_private_key.rs  errors.rs  ethereum_address.rs  ethereum_keys.rs  ethereum_transaction.rs  get_cli_args.rs  get_eth_private_key.rs  get_tool_version_info.rs  initialize_logger.rs  mod.rs  sign_ethereum_transaction.rs  sign_transaction.rs  state.rs  types.rs  usage_info.rs  utils.rs
src/test_utils/: mod.rs
