[package]
edition = "2018"
name = "etheroff"
version = "1.0.0"
authors = ["Greg Kapka <greg@kapka.co.uk>"]

[dependencies]
hex = "0.4.2"
log = "0.4.8"
rand = "0.7.3"
docopt = "1.1.0"
tiny-keccak = "1.4"
simplelog = "0.7.3"
secp256k1 = "0.17.2"
serde_json = "1.0.40"
serde_derive = "1.0.101"
ethereum-types = "0.9.2"
serde = { version = "1.0.114", features = ["derive"] }
