[package]
edition = "2018"
name = "etheroff"
version = "2.1.0"
authors = ["Greg Kapka <greg@kapka.co.uk>"]

[dependencies]
hex = "0.4.2"
rlp = "0.4.5"
log = "0.4.8"
rand = "0.7.3"
docopt = "1.1.0"
tiny-keccak = "1.4"
num-format = "0.4.0"
simplelog = "0.7.3"
serde_derive = "1.0.101"
ethereum-types = "0.9.2"
serde = { version = "1.0.114", features = ["derive"] }
secp256k1 = { git = "https://github.com/bifrost-codes/rust-secp256k1", features = ["recovery", "unstable"] }
